# five-clis

./: .gitignore  .markdownlint.jsonc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  install.sh  mkver.conf  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/design/: README.md
docs/manual/: getting-started.md  options.md  troubleshooting.md  usage.md
src/fiveclis/: cache.py  cli.py  config.py  fsutil.py  logger.py  settings.py  ui.py  updater.py  xdg.py
tests/: test_cache.py  test_cli.py  test_config.py  test_fsutil.py  test_ui.py  test_updater.py  test_xdg.py
utils/: bump_version_if_tag_exists.sh  check_binary_version.sh  create_release.sh  generate_man_page.py  install_git_mkver.sh  preamble.py  read_version.py  rename.py
