[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiveclis"
dynamic = ["version"]
description = "A batteries-included Python CLI template"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steve Williams" }]
dependencies = [
  "click",
  "requests",
  "tabulate",
  "tomli; python_version < '3.11'",
]

[project.scripts]
five-clis = "fiveclis.cli:main"

[project.optional-dependencies]
test = [
  "pytest",
  "requests-mock",
]
lint = [
  "black",
  "ruff",
]
build = [
  "shiv",
  "click-man",
]
dev = [
  "black",
  "click-man",
  "pytest",
  "requests-mock",
  "ruff",
  "shiv",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
